# sys_manage_dc

./: .gitignore  README.md
components/com_i2c/: CMakeLists.txt  com_i2c.c  i2cscanner.c
components/com_i2c/include/: com_i2c.h
main/: idf_component.yml  main.c
sys-manage-dc/: .firebaserc  package-lock.json  package.json
sys-manage-dc/.firebase/: hosting.YnVpbGQ.cache
sys-manage-dc/src/: App.tsx  index.tsx
sys-manage-dc/src/Firebase/: FirebaseConfig.ts
sys-manage-dc/src/Reducers/: requestReducer.ts
sys-manage-dc/src/Services/: cloudinaryService.ts
sys-manage-dc/src/Store/: store.ts
sys_manage_dc/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
sys_manage_dc/components/button/: CMakeLists.txt  Kconfig.projbuild  button.c  button_ctrl.c
sys_manage_dc/components/buzzer_status/: CMakeLists.txt  buzzer_status.c
sys_manage_dc/components/com_firestore/: CMakeLists.txt  com_firestore.c
sys_manage_dc/components/esp_firebase/: CMakeLists.txt  app.cpp  app.h  firebase_config.h  firebase_wrapper.cpp  firebase_wrapper.h  method_firestore.cpp  method_firestore.h
sys_manage_dc/components/internal_rtc/: CMakeLists.txt  internal_rtc.c
sys_manage_dc/components/led_status/: CMakeLists.txt  Kconfig.projbuild  led_status.c
sys_manage_dc/components/smartconfig_webserver/: CMakeLists.txt  app_config.c  app_http_server.c  gen_pro_qr.c  smartconfig_webserver.c  webserver.html
sys_manage_dc/components/smartconfig_webserver/include/: app_config.h  gen_pro_qr.h  smartconfig_webserver.h
sys_manage_dc/main/: CMakeLists.txt  idf_component.yml  main.c
(+57 files in other folders)
